--- a/js/templates/all.hbs
+++ b/js/templates/all.hbs
@@ -7,11 +7,11 @@
     <li id="equals">&#8799;</li>
     <li id="final"></li>
 </ul>
-<div id="operations">
+<div id="operations" style="display:none;">
     <ul id="operationsUL">
         <li class="operation">+</li>
         <li class="operation">-</li>
-        <li class="operation">X</li>
-        <li class="operation">/</li>
+        <li class="operation">&#215</li>
+        <li class="operation">&#247</li>
     </ul>
 </div>
