--- a/sass/stylesheet.css
+++ b/sass/stylesheet.css
@@ -1,25 +1,69 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto);
 body {
+  font-family: "Roboto", sans-serif;
   background-color: red; }
   body #operations {
-    display: none; }
+    width: 100vw;
+    height: 50vh;
+    position: fixed;
+    left: 0px;
+    background-color: #5A819C;
+    bottom: 0px;
+    border-radius: 10pt;
+    box-shadow: -0.5pt -2pt 1pt rgba(0, 0, 0, 0.2); }
+    body #operations #operationsUL {
+      display: flex;
+      flex-direction: rtl;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      justify-content: space-around; }
+      body #operations #operationsUL .operation:hover {
+        opacity: 1;
+        box-shadow: 0 1pt 1pt rgba(0, 0, 0, 0.5); }
+      body #operations #operationsUL .operation {
+        background-color: #425984;
+        display: inline-flex;
+        border-radius: 5pt;
+        opacity: 0.7;
+        font-size: 7vmin;
+        margin-top: 2vmax;
+        padding: 1em;
+        flex: 0 0 auto;
+        box-shadow: 0 1pt 1pt rgba(0, 0, 0, 0.3);
+        text-align: center;
+        align-self: flex-start; }
   body #boxes {
+    position: absolute;
+    left: 0px;
+    width: 100vw;
     display: flex;
+    font-size: 4vmin;
     flex-direction: rtl;
     justify-content: space-around; }
     body #boxes #equals {
       font-size: 10vmax;
-      display: inline-flex; }
+      display: inline-flex;
+      color: #57935D; }
     body #boxes .selected {
-      border: 2px solid red; }
+      opacity: 1 !important; }
+    body #boxes .box.new {
+      box-shadow: 0 1pt 1pt rgba(0, 0, 0, 0.5);
+      opacity: 0.9;
+      background-color: #F95940; }
     body #boxes #final {
       display: inline-flex;
       padding: 2em;
-      border: 1px solid black;
-      margin: auto; }
+      margin: auto;
+      border-radius: 15pt;
+      box-shadow: 0 1pt 1pt rgba(0, 0, 0, 0.3);
+      background-color: #7AC981; }
     body #boxes .box {
+      opacity: 0.8;
+      background-color: #F97F57;
       display: inline-flex;
       padding: 2em;
-      border: 1px solid black;
-      margin: auto; }
+      margin: auto;
+      border-radius: 15pt;
+      box-shadow: 0 1pt 1pt rgba(0, 0, 0, 0.3); }
 
 /*# sourceMappingURL=stylesheet.css.map */
